update thew sigup code